upload golf app

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=HSGolf
+application.vendor=michael.remington
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,37 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/HSGolf.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\commons-logging-1.2.jar
+file.reference.google-api-client-1.24.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\google-api-client-1.24.1.jar
+file.reference.google-http-client-1.24.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\google-http-client-1.24.1.jar
+file.reference.google-http-client-jackson-1.24.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\google-http-client-jackson-1.24.1.jar
+file.reference.google-oauth-client-1.24.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\google-oauth-client-1.24.1.jar
+file.reference.gson-2.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\gson-2.1.jar
+file.reference.httpclient-4.5.3.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\httpclient-4.5.3.jar
+file.reference.httpcore-4.4.6.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\httpcore-4.4.6.jar
+file.reference.jackson-core-2.9.2.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\jackson-core-2.9.2.jar
+file.reference.jackson-core-asl-1.9.11.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\jackson-core-asl-1.9.11.jar
+file.reference.jsr305-3.0.2.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\jsr305-3.0.2.jar
+file.reference.protobuf-java-2.6.1.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\protobuf-java-2.6.1.jar
+file.reference.xpp3-1.1.4c.jar=C:\\Users\\michael.remington\\Downloads\\google-api-client-assembly-1.24.1-1.24.1\\google-api-java-client\\libs\\xpp3-1.1.4c.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.google-api-client-1.24.1.jar}:\
+    ${file.reference.google-oauth-client-1.24.1.jar}:\
+    ${file.reference.google-http-client-1.24.1.jar}:\
+    ${file.reference.google-http-client-jackson-1.24.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.gson-2.1.jar}:\
+    ${file.reference.httpclient-4.5.3.jar}:\
+    ${file.reference.httpcore-4.4.6.jar}:\
+    ${file.reference.jackson-core-2.9.2.jar}:\
+    ${file.reference.jackson-core-asl-1.9.11.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.protobuf-java-2.6.1.jar}:\
+    ${file.reference.xpp3-1.1.4c.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
